--- a/kuka_lbr_iisy_support/package.xml
+++ b/kuka_lbr_iisy_support/package.xml
@@ -6,16 +6,16 @@
   <author>Aron Svastits</author>
   <maintainer email="svastits1@gmail.com">Aron Svastits</maintainer>
   <license>BSD</license>
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>catkin</buildtool_depend>
   <depend>xacro</depend>
-  <depend>launch_ros</depend>
+<!--   <depend>launch_ros</depend> -->
   <exec_depend>joint_state_publisher_gui</exec_depend>
   <exec_depend>kuka_resources</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
-  <exec_depend>rviz2</exec_depend>
-  <test_depend>launch_testing_ament_cmake</test_depend>
+<!--   <exec_depend>rviz2</exec_depend> -->
+<!--   <test_depend>launch_testing_ament_cmake</test_depend> -->
   <export>
     <architecture_independent/>
-    <build_type>ament_cmake</build_type>
+<!--    <build_type>ament_cmake</build_type>-->
   </export>
 </package>
